# General-Knowledge-

03_Source/: README.md
03_Source/Control_Python/: README.txt  Robot_Control_v2.py
03_Source/Firmware_Software/: CMakeLists.txt  partitions.csv  platformio.ini
03_Source/Firmware_Software/components/robot_delta/: CMakeLists.txt
03_Source/Firmware_Software/components/robot_delta/include/: robot_delta.h  task_kinematics.h  task_motor_control.h  task_planner.h
03_Source/Firmware_Software/components/robot_delta/src/: robot_delta.c  task_kinematics.c  task_motor_control.c  task_planner.c
03_Source/Firmware_Software/src/: CMakeLists.txt  main.c
03_Source/Hardware/Native_SolidWorks/: Bi_tron_khop_quay.SLDPRT  Canh_tay_chu_dong.SLDPRT  Canh_tay_thu_dong.SLDPRT  Chan_Robot.SLDPRT  Chan_Robot_duoi.SLDPRT  Chot_tay_chu_dong.SLDPRT  De_dong.SLDPRT  De_tinh_new.SLDPRT  ESP-32_v1.STEP.SLDASM  Lop_chan_ROBOT.SLDPRT  MG996R SBORKA.STEP.SLDASM  Phip_dong.SLDPRT  README.txt  Robot_full_body.SLDASM  ho_tro_tay_quay.SLDPRT
Radar_1843_Firmware/: .gitignore  Quy_tac_dat_ten.txt  luu_y_khi_tao_module.txt  yeu_cau.txt
Radar_1843_Firmware/Gtrack/: FLOW THỰC HIỆN chuyển đổi.docx  File gtrack cart2sph.docx  gtrack.h
Radar_1843_Firmware/Out_Of_Box_1843_MSS/: .ccsproject  .clangd  .cproject  .project
Radar_1843_Firmware/out_of_box_1843_dss/: .ccsproject  .cproject  .project
strutils/: Makefile  bstrutils.c
test/: bai15 so sphenic.cpp  bai26 so hoan hao.cpp  bai32 thua so ngto.cpp  bai35 ucln & bcnn.cpp  bai41 so gan thuan nghich.cpp  bai45 bieu dien so.cpp
(+287 files in other folders)
